--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -469,6 +469,10 @@
     <string name="hours">Hours</string>
     <string name="minutes">Minutes</string>
     <string name="test">Test</string>
+    <string name="channels">Channels</string>
+    <string name="channels_global_warning">With Notification Channels, global notification customization
+        for LED, vibrate, heads up, and ringtone are no longer possible. Access customization options
+        from within each channel instead.</string>
     <string name="off">Off</string>
     <string name="on">On</string>
     <string name="rate_it">Rate It!</string>
